<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_104" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvLabelTextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_label_text_color"
        android:labelFor="@id/spTextColor" />
    <Spinner
        android:id="@+id/spTextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/string_label_text_color" />

    <TextView
        android:id="@+id/tvLabelBgColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_label_bg_color"
        android:labelFor="@id/spBgColor" />
    <Spinner
        android:id="@+id/spBgColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/string_label_bg_color" />

    <TextView
        android:id="@+id/tvLabelShadowColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_label_shadow_color"
        android:labelFor="@id/spShadowColor" />
    <Spinner
        android:id="@+id/spShadowColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/string_label_shadow_color" />
        
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_64" />
    <com.google.android.material.slider.Slider
        android:id="@+id/slTextSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/string_64"
        android:valueFrom="12"
        android:valueTo="120"
        android:value="60" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_185" />
    <com.google.android.material.slider.Slider
        android:id="@+id/slShadowRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/string_185"
        android:valueFrom="0"
        android:valueTo="50"
        android:value="10" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_186" />
    <com.google.android.material.slider.Slider
        android:id="@+id/slShadowDx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/string_186"
        android:valueFrom="-50"
        android:valueTo="50"
        android:value="5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_187" />
    <com.google.android.material.slider.Slider
        android:id="@+id/slShadowDy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/string_187"
        android:valueFrom="-50"
        android:valueTo="50"
        android:value="5" />

    <TextView
        android:id="@+id/tvLabelFontFamily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_label_font_family"
        android:labelFor="@id/spFontFamily" />
    <Spinner
        android:id="@+id/spFontFamily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/string_label_font_family" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_129" />
    <RadioGroup
        android:id="@+id/rgPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">
        <RadioButton
            android:id="@+id/rbPosTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_155" />
        <RadioButton
            android:id="@+id/rbPosCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_158"
            android:checked="true" />
        <RadioButton
            android:id="@+id/rbPosBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_157" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_188" />
    <RadioGroup
        android:id="@+id/rgAlignment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">
        <RadioButton
            android:id="@+id/rbAlignLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_190" />
        <RadioButton
            android:id="@+id/rbAlignCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_158"
            android:checked="true" />
        <RadioButton
            android:id="@+id/rbAlignRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_191" />
    </RadioGroup>

</LinearLayout>
